<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hwoodall.android.simpletodolist.ToDoActivity">


    <EditText
        android:id="@+id/edit_title"
        android:background="@color/lightOrange"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFAB91"
        android:padding="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"/>

    <EditText
        android:id="@+id/edit_description"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="top"
        android:layout_margin="20dp"
        android:inputType="textMultiLine"
        android:hint="@string/description_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center|bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_date"/>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/date_button"
                android:textColor="#FFFFFF"
                android:text="@string/date_ph"
                android:background="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"/>


        </LinearLayout>



        <CheckBox
            android:id="@+id/solved_checkbox"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_checkbox"
            android:layout_gravity="left"/>

    </LinearLayout>




</LinearLayout>
